Fixed the Post component alignment and link placement

--- a/frontend/src/components/post/post.css
+++ b/frontend/src/components/post/post.css
@@ -6,7 +6,7 @@
 
 /* >>>>> POST CONTAINER <<<<< */
     .postContainer{
-        width: 80%;
+        width: 100%;
         height: 341px;
 
         border-bottom: 1px solid black;
@@ -14,6 +14,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-evenly;
+        align-items: center;
     
     }
     /* >>> RESPONSIVE <<< */
@@ -44,6 +45,7 @@
     .feedPostDetails{
         width: 100%;
         height: 50px;
+        margin: 0 auto;
 
         font-size: 16px;
         font-family: "Kulim Park", serif;
